--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 
 .container-fluid {
-    margin: 2%;
-    padding: 3%;
+    margin: 1rem;
+    padding: 1rem;
     background-color: #eee;
     border-radius: 5rem;
 }
