--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,13 @@
 
-.container-fluid {
+.container {
     background-color: #eee;
+    padding: 2rem;
     border-radius: 1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 label {
